<resources>
    <string name="app_name">DigiMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_person">Name and surname</string>
    <string name="nav_header_picdesc">Profile Picture</string>
    <string name="action_settings">Settings</string>


    <string name="menu_profile">Profile</string>
    <string name="menu_documents">Documents</string>
    <string name="menu_cards">Cards</string>
    <string name="menu_notes">Notes</string>

    <string name="intro_screen_title">Title</string>
    <string name="intro_screen_description">Description</string>
    <string name="btn_get_started_text">Get Started</string>
    <string name="skip_text_view">Skip</string>

    <string name="profile_edit_butt_text">EDIT</string>
    <string name="profile_save_butt_text">SAVE</string>
    <string name="profile_qr_icon_desc">Get QR code</string>
    <string name="profile_image_desc">Profile image</string>
    <string name="profile_name_input_desc">Name and surname</string>
    <string name="profile_location_input_desc">City, State</string>
    <string name="profile_email_input_desc">Email</string>
    <string name="profile_email_input_placeholder">youremail@domain.com</string>
    <string name="profile_phone_input_desc">Phone</string>
    <string name="profile_phone_input_placeholder">Your phone number</string>
    <string name="profile_company_input_desc">Company</string>
    <string name="profile_company_input_placeholder">Your company</string>
    <string name="qrcode_dialog_close_btn_desc">Close QR code dialog</string>
    <string name="qrcode_dialog_image_desc">QR code</string>
</resources>