<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/documents_icon"
            android:title="@string/menu_documents" />
        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/cards_icon"
            android:title="@string/menu_cards" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/notes_icon"
            android:title="@string/menu_notes" />
    </group>
</menu>