<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav_fragments.profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="#ffb500">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.85">

                    <Button
                        android:id="@+id/edit_profile_butt"
                        android:layout_width="67dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:layout_toStartOf="@+id/qr_code_icon"
                        android:text="@string/profile_edit_butt_text" />

                    <ImageButton
                        android:id="@+id/qr_code_icon"
                        android:layout_width="59dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/profile_qr_icon_desc"
                        android:src="@drawable/qr_code_icon" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/profile_img"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="15dp"
                        android:clickable="false"
                        android:contentDescription="@string/profile_image_desc"
                        android:longClickable="true"
                        android:src="@drawable/default_profile_icon" />

                    <EditText
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/profile_name_input_desc"
                        android:inputType="textPersonName"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/profile_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/profile_location_input_desc"
                        android:inputType="textPersonName"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:weightSum="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.27">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/profile_email_icon"
                        android:drawablePadding="10dp"
                        android:focusable="false"
                        android:hint="@string/profile_email_input_desc"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.27">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/profile_phone_icon"
                        android:drawablePadding="10dp"
                        android:focusable="false"
                        android:hint="@string/profile_phone_input_desc"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.27">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/company_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/profile_company_icon"
                        android:drawablePadding="10dp"
                        android:focusable="false"
                        android:hint="@string/profile_company_input_desc"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/save_profile_butt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.19"
                    android:text="@string/profile_save_butt_text"
                    android:visibility="invisible" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>